286- build the app layout: createBrowserRouter + 286. Building the AppLayout(Nested Route)
createBrowserRouter([
  {
    path: "/",
    element: <Home />,
  },
  {
    path: "/menu",
    element: <Menu />,
  },
  {
    path: "/cart",
    element: <Cart />,
  },
  {
    path: "/order/new",
    element: <CreateOrder />,
  },
  {
    path: "/order/:orderId",
    element: <Order />,
  },
]);

export default function App() {
  return <RouterProvider router={router} />;
}

import { createBrowserRouter, RouterProvider } from "react-router-dom";

import Home from "./features/ui/Home";
import Menu from "./features/menu/Menu";
import Cart from "./features/cart/Cart";
import CreateOrder from "./features/order/CreateOrder";
import Order from "./features/order/Order";
import AppLayout from "./features/ui/AppLayout";

// https://dev.to/tywenk/how-to-use-nested-routes-in-react-router-6-4jhd

const router = createBrowserRouter([
  {
    element: <AppLayout />,
    children: [
      {
        path: "/",
        element: <Home />,
      },
      {
        path: "/menu",
        element: <Menu />,
      },
      {
        path: "/cart",
        element: <Cart />,
      },
      {
        path: "/order/new",
        element: <CreateOrder />,
      },
      {
        path: "/order/:orderId",
        element: <Order />,
      },
    ],
  },
]);

export default function App() {
  return <RouterProvider router={router} />;
}

In the code above, the AppLayout has child layouts from Home to Order

export default function AppLayout() {
  return (
    <div>
      <Header />

      <main>
        <Outlet />
      </main>

      <CartOverview />
    </div>

  );
}

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Challenges/usereducer-bank-accout/package-lock.json
 /15-redux-intro/starter/node_modules
 15-redux-intro/starter/package-lock.json
 15-redux-intro/starter/README.md
+/node_modules
